--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Convert Music Links</title>
+    <link rel="icon" href="/favicon.png" type="image/x-icon"/>
     <style>
         :root {
             color-scheme: light;
